# DIY-Stupid-Drone

./: .gitignore  README.md
ESPNetv2/: gen_cityscapes.py  test_model.py
Frontend/: demo_engine.py  demo_superpoint.py  engineTRT.py  export_superpoint.py  superpoint_frontend_parse.py  tracing_superpoint.py
Frontend-cpp/: CMakeLists.txt  Superpoint.cpp  Superpoint.h  TRT-CMakeLists.txt  test_Superpoint.cpp  test_TRT.cpp  test_libtorch.cpp
Frontend-cpp/superpoint/: CMakeLists.txt  SuperPoint.cpp  SuperPoint.h  test_Superpoint.cpp
Frontend-cpp/torch_script/: CMakeLists.txt  Superpoint.cpp  Superpoint.h  test_Superpoint.cpp
Frontend/onnx-tensorrt-code/: README.md  buildEngine.py  engine.py  inference.py  inference_semantic_seg.py  loadResNet.py  loadSemanticSegmentation.py  unet_example.py
OV-core/: CMakeLists.txt  graph_gen.cpp  vpi_demo.cpp
OV-core/DNN/: GraphUtils.h  Superpoint.cpp  Superpoint.h  anms.h
OV-core/DNN/ANMS/: anms.cpp  anms.h
Pose/: hrnet_w32_256x192.yaml  res50_256x192.yaml  test_hrnet.py  trace_hrnet.py
gtsam-examples/: CMakeLists.txt  CMakePresets.json  CMakeSettings.json  hello_gtsam.cpp  vcpkg.txt
